--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "dependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.23",
+    "@types/uuidv4": "^5.0.0",
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
-    "node": "^14.5.0"
+    "express-async-errors": "^3.1.1",
+    "node": "^14.5.0",
+    "pg": "^8.3.0",
+    "typeorm": "^0.2.25",
+    "uuidv4": "^6.1.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "eslint-plugin-prettier": "^3.1.4",
     "ts-node-dev": "^1.0.0-pre.51",
     "typescript": "^3.9.6"
