--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/uuidv4": "^5.0.0",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.15.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "node": "^14.5.0",
