--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es6": true
+        "es6": true,
+        "jest": true
     },
     "extends": [
         "airbnb-base",
@@ -18,20 +19,39 @@
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
-    "plugins": ["@typescript-eslint", "prettier"],
+    "plugins": ["@typescript-eslint", "prettier", "import"],
     "rules": {
-        "settings": {
-            "import/resolver": {
-                "typescript": {}
-            }
-        },
+        "import/no-unresolved": "error",
+        "no-underscore-dangle": "off",
+        "prettier/prettier": "error",
+        "class-methods-use-this": "off",
+        "@typescript-eslint/camelcase": "off",
+        "no-useless-constructor": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            { "argsIgnorePattern": "_" }
+        ],
+        "@typescript-eslint/interface-name-prefix": [
+            "error",
+            { "prefixWithI": "always" }
+        ],
         "import/extensions": [
             "error",
             "ignorePackages",
             {
                 "ts": "never"
             }
-        ],
-        "prettier/prettier": "error"
+        ]
+    },
+    "settings": {
+        "import/parsers": {
+            "@typescript-eslint/parser": [".ts", ".tsx"]
+        },
+        "import/resolver": {
+            // use <root>/tsconfig.json
+            "typescript": {
+                "alwaysTryTypes": true // always try to resolve types under `<roo/>@types` directory even it doesn't contain any source code, like `@types/unist`
+            }
+        }
     }
 }
