--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
         "date-fns": "^2.15.0",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
+        "import": "^0.0.6",
         "node": "^14.5.0",
         "pg": "^8.3.0",
+        "reflect-metadata": "^0.1.13",
+        "tsconfig-paths": "^3.9.0",
+        "tsyringe": "^4.3.0",
         "typeorm": "^0.2.25",
         "uuidv4": "^6.1.1"
     },
@@ -21,14 +25,21 @@
         "@types/express": "^4.17.7",
         "@types/node": "^14.0.23",
         "@types/uuidv4": "^5.0.0",
+        "eslint": "^7.5.0",
+        "eslint-config-airbnb-base": "^14.2.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-import-resolver-typescript": "^2.2.0",
+        "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-prettier": "^3.1.4",
-        "ts-node-dev": "^1.0.0-pre.51",
+        "prettier": "^2.0.5",
+        "ts-jest": "^26.1.4",
+        "ts-node-dev": "^1.0.0-pre.56",
         "typescript": "^3.9.6"
     },
     "scripts": {
         "build": "tsc",
-        "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
-        "start": "ts-node src/server.ts",
-        "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+        "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+        "start": "ts-node src/shared/infra/http/server.ts",
+        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
     }
 }
