--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
         "tsconfig-paths": "^3.9.0",
         "tsyringe": "^4.3.0",
         "typeorm": "^0.2.25",
-        "uuidv4": "^6.1.1"
+        "uuidv4": "^6.2.1"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.7",
+        "@types/jest": "^26.0.8",
         "@types/node": "^14.0.23",
         "@types/uuidv4": "^5.0.0",
         "eslint": "^7.5.0",
@@ -31,6 +32,7 @@
         "eslint-import-resolver-typescript": "^2.2.0",
         "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-prettier": "^3.1.4",
+        "jest": "^26.2.2",
         "prettier": "^2.0.5",
         "ts-jest": "^26.1.4",
         "ts-node-dev": "^1.0.0-pre.56",
