--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
+        "@types/jsonwebtoken": "^8.5.0",
         "bcrypt": "^5.0.0",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
@@ -11,6 +12,7 @@
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
         "import": "^0.0.6",
+        "jsonwebtoken": "^8.5.1",
         "node": "^14.5.0",
         "pg": "^8.3.0",
         "reflect-metadata": "^0.1.13",
